# bbl

./: Cargo.toml  README.md  build.sh  index.html  main.js
backend/: Cargo.toml
backend/src/: codegen.rs  main.rs
benchmarks/: test.bdl
cpp_codegen/: Cargo.toml  README.md
cpp_codegen/src/: lib.rs
frontend/: Cargo.toml
frontend/src/: ast.rs  main.rs  parser.pest  parser.rs  parser_test.rs  typeck.rs
src/: lib.rs
web/wasm/: bbl_web.d.ts  bbl_web.js  bbl_web_bg.wasm  bbl_web_bg.wasm.d.ts  package.json
