[package]
name = "bbl-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
bbl-frontend = { path = "../frontend" }
bbl-backend = { path = "../backend" }
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = 3
lto = true
